--- a/Pages/index.html
+++ b/Pages/index.html
@@ -253,7 +253,7 @@ Dhruv Vahoniya
           <img class="img-fluid" data-bss-hover-animate="pulse" src="Image/telegram.webp"
             style="filter: invert(100%);height: 28px;margin: 5px;margin-right: 10px;margin-left: 10px;"
             alt=" Telegram Logo"></a><a href="" target="_blank"
-          rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="image/twitter.webp"
+          rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="Image/twitter.webp"
             style="filter: invert(100%);height: 28px;margin: 5px;margin-right: 10px;margin-left: 8px;"
             alt="Twitter Logo">
           </a>
