--- a/Pages/Experience.html
+++ b/Pages/Experience.html
@@ -25,32 +25,34 @@
   <!----------------------------navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary ">
     <div class="container-fluid">
-    
-		<a1 class="navbar-brand" href="#" style="color: black; font-family: Aladin,cursive; font-size: 40px; padding-left: 50px;">
 
-Dhruv Vahoniya
-		  </a1>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <a1 class="navbar-brand" href="#"
+        style="color: black; font-family: Aladin,cursive; font-size: 40px; padding-left: 50px;">
+
+        Dhruv Vahoniya
+      </a1>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
           </li>
-        <li class="nav-item">
-        <a class="nav-link" href="Python_Certifcate.html">Education</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="Experience.html">Experiences</a>
-        </li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Achivement</a>
-			</li>
-      </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="Python_Certifcate.html">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Experience.html">Experiences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Achivement</a>
+          </li>
+        </ul>
       </div>
     </div>
-</nav> 
+  </nav>
 
   <!------------------------------------------------->
 
@@ -73,7 +75,7 @@ Dhruv Vahoniya
     <div class="testimonial grid-col-span-2 flow bg-primary-400 quote text-neutral-100">
       <div class="flex">
         <div>
-          <img  src="Certificate/Intership.png" alt="daniel clifford" style="width: 300px;
+          <img src="Certificate/Intership.png" alt="daniel clifford" style="width: 300px;
           height: 300px;
         max-width: 100%;
         display: block;">
@@ -84,7 +86,7 @@ Dhruv Vahoniya
           </p>
         </div>
       </div>
-  
+
     </div>
     <div class="testimonial grid-col-span-2 flow bg-primary-400 quote text-neutral-100">
       <div class="flex">
@@ -96,10 +98,11 @@ Dhruv Vahoniya
         </div>
         <div>
           <h2 class="name">DeetsDigital Pvt.Ltd</h2>
-          <p class="position">Experiecnd two days workshop and learn more about how data science can be implemented in real world.</p>
+          <p class="position">Experiecnd two days workshop and learn more about how data science can be implemented in
+            real world.</p>
         </div>
       </div>
-   
+
     </div>
   </div>
   <!----------------------------------------------------->
@@ -112,10 +115,10 @@ Dhruv Vahoniya
             Vahoniya</p>
           <p class="footer-pages" style="color: rgb(255,255,255);">
             <a href="index.html" style="color: rgb(255,255,255);">Home</a>&nbsp;•&nbsp;
-              <a href="Python_Certifcate.html" style="color: rgb(255,255,255);">Education</a>&nbsp;•&nbsp;
-              <a href="" style="color: rgb(255,255,255);">Projects</a>&nbsp;<br>
-              <a href="" style="color: rgb(255,255,255);">Other</a>&nbsp;
-          
+            <a href="Python_Certifcate.html" style="color: rgb(255,255,255);">Education</a>&nbsp;•&nbsp;
+            <a href="" style="color: rgb(255,255,255);">Projects</a>&nbsp;<br>
+            <a href="" style="color: rgb(255,255,255);">Other</a>&nbsp;
+
         </div>
       </div>
       <div class="col footer-div-right" style="padding-top: 5px;">
@@ -125,27 +128,26 @@ Dhruv Vahoniya
               alt=" LinkedIn Logo"></a><a href="" target="_blank" rel="noopener"><img class="img-fluid"
               data-bss-hover-animate="pulse" src="Image/github.webp"
               style="filter: invert(100%);height: 28px;margin: 5px;margin-right: 7px;margin-left: 8.5px;"
-              alt=" GitHub Logo"></a><a href="" target="_blank"
-            rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="Image/polywork.png"
+              alt=" GitHub Logo"></a><a href="" target="_blank" rel="noopener"><img class="img-fluid"
+              data-bss-hover-animate="pulse" src="Image/polywork.png"
               style="filter: invert(0%);height: 27px;margin: 10px;margin-right: 10px;margin-left: 10px;"
               alt="ORCID Logo">
-            </a>
-            <a href="https://www.cloudskillsboost.google/public_profiles/ee1acfc3-576a-4d7c-8404-0752c4d413de"
-            target="_blank" rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse"
-              src="Image/gcp.webp"
+          </a>
+          <a href="https://www.cloudskillsboost.google/public_profiles/ee1acfc3-576a-4d7c-8404-0752c4d413de"
+            target="_blank" rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="Image/gcp.webp"
               style="filter: invert(100%);height: 33px;margin: 5px;margin-right: 7px;margin-left: 5px;"
               alt="GCP Logo"></a><a href="" target="_blank" rel="noopener">
             <img class="img-fluid" data-bss-hover-animate="pulse" src="Image/telegram.webp"
               style="filter: invert(100%);height: 28px;margin: 5px;margin-right: 10px;margin-left: 10px;"
-              alt=" Telegram Logo"></a><a href="" target="_blank"
-            rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="Image/twitter.webp"
+              alt=" Telegram Logo"></a><a href="" target="_blank" rel="noopener"><img class="img-fluid"
+              data-bss-hover-animate="pulse" src="image/twitter.webp"
               style="filter: invert(100%);height: 28px;margin: 5px;margin-right: 10px;margin-left: 8px;"
               alt="Twitter Logo">
-            </a>
-            </div>
-        <p class="footer-para" style="color: rgb(221,221,221);padding-top: 25px;">Dhruv Vahoniya is an experienced product
-          lead and manager with a background in Data Science, Software Dev., AI, and Cloud. He's a publisher author with
-          expertise in Management and Finance.</p>
+          </a>
+        </div>
+        <p class="footer-para" style="color: rgb(221,221,221);padding-top: 25px;">I am a B.Tech student with experience
+          in internships and a strong background in Python and web development. Passionate about data science, I am
+          eager to explore its potential for the future.</p>
       </div>
     </div>
   </div>
