--- a/Pages/Python_Certifcate.html
+++ b/Pages/Python_Certifcate.html
@@ -20,34 +20,32 @@
   <!----------------------------navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary ">
     <div class="container-fluid">
+    
+		<a1 class="navbar-brand" href="#" style="color: black; font-family: Aladin,cursive; font-size: 40px; padding-left: 50px;">
 
-      <a1 class="navbar-brand" href="#"
-        style="color: black; font-family: Aladin,cursive; font-size: 40px; padding-left: 50px;">
-
-        Dhruv Vahoniya
-      </a1>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+Dhruv Vahoniya
+		  </a1>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Python_Certifcate.html">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Experience.html">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Achivement</a>
-          </li>
-        </ul>
+        <li class="nav-item">
+        <a class="nav-link" href="Python_Certifcate.html">Education</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="Experience.html">Experience</a>
+        </li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">Achivement</a>
+			</li>
+      </ul>
       </div>
     </div>
-  </nav>
+</nav> 
 
   <!------------------------------------------------->
 
@@ -67,134 +65,85 @@
 
   <!------------------------------------------------>
 
-  <!------------------------------------------------->
+  <!----------------------Certificate_1-------------------------->
+  <div class="first">
 
-  <!------------------------------------------------>
-  <div style="background-color: #ffffff;padding: 30px;padding-top: 80px;padding-bottom: 80px;">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-lg-2">
-        <div class="col">
-          <div>
-            <div class="shadow-lg eventDiv eventDiv-education aos-init aos-animate" data-aos="zoom-out"
-              data-aos-duration="1000">
-              <p style="font-size: 31px;margin-top: -15px;"><strong>Python</strong><br><strong>(Online Program)</strong>
-              </p>
-            </div><img class="rounded img-fluid shadow-lg eventImg aos-init aos-animate" data-aos="zoom-out"
-              data-aos-duration="1000" data-aos-delay="150" src="Image/UNI_12.png">
-          </div>
-        </div>
-        <div class="col eveText" style="padding-top: 20px;">
-          <p data-aos="zoom-out" data-aos-duration="1000" class="eveGradientText-education aos-init aos-animate"
-            style="font-size: 30px;"><strong>Python Fundamentals</strong></p>
-          <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="100" class="aos-init aos-animate">
-            <strong>Coursera</strong></p>
-          <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="200" class="aos-init aos-animate">A
-            specialization provided by University of Michigan for Python on Coursera, covering Programming Fundamentals,
-            Web Access, Databases, Data Structures, and Retrieving, Processing, & Visualizing of Data among others.
+    <div class="image_wrapper">
+      <img style="height: 300px" ; width="550px; rad" src="Image/Python_1.png" alt="" />
+      <div class="overlay">
+        <img style="height: 200px" ; width="360px" src="Image/UNI_12.png" alt="" />
+      </div>
+    </div>
 
-          </p><a href="https://www.coursera.org/account/accomplishments/verify/U38RE2NH76AH" target="_blank">
-            <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="300"
-              class="eveGradientText-education aos-init aos-animate"><strong>Learn more&nbsp;→</strong></p>
-          </a>
-        </div>
-      </div>
+    <div class="card-1">
+      <p class="eveGradientText1" style="font-size: 30px;">
+        <strong>Access Web Data</strong>
+      </p>
+      <p>
+        <strong>Michigan University</strong>
+      </p>
+      <p>A course provided by Coursera, Web Access in which learn about accessing web data using python libraries.</p>
+      <a href="https://memp.pratt.duke.edu/" target="_blank">
+        <p class="eveGradientText1">
+          <strong>Learn more &nbsp;→</strong>
+        </p>
+      </a>
     </div>
-  </div>
-  <!------------------------------------------------>
-  <!------------------------------------------------>
-  <div style="background-color: #ffffff;padding: 30px;padding-top: 80px;padding-bottom: 80px;">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-lg-2">
-        <div class="col">
-          <div>
-            <div class="shadow-lg eventDiv eventDiv-education aos-init aos-animate" data-aos="zoom-out"
-              data-aos-duration="1000">
-              <p style="font-size: 31px;margin-top: -15px;"><strong>Python</strong><br><strong>(Online Program)</strong>
-              </p>
-            </div><img class="rounded img-fluid shadow-lg eventImg aos-init aos-animate" data-aos="zoom-out"
-              data-aos-duration="1000" data-aos-delay="150" src="Image/UNI_12.png">
-          </div>
-        </div>
-        <div class="col eveText" style="padding-top: 20px;">
-          <p data-aos="zoom-out" data-aos-duration="1000" class="eveGradientText-education aos-init aos-animate"
-            style="font-size: 30px;"><strong>Data Structure</strong></p>
-          <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="100" class="aos-init aos-animate">
-            <strong>Udacity</strong></p>
-          <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="200" class="aos-init aos-animate">A
-            specialization provided by University of Michigan for Python on Coursera, covering Programming Fundamentals,
-            Web Access, Databases, Data Structures, and Retrieving, Processing, & Visualizing of Data among others.
-          </p><a href="https://www.coursera.org/account/accomplishments/verify/RBU9FT2CAEAX" target="_blank">
-            <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="300"
-              class="eveGradientText-education aos-init aos-animate"><strong>Learn more&nbsp;→</strong></p>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!------------------------------------------------>
-  <!------------------------------------------------>
-  <div style="background-color: #ffffff;padding: 30px;padding-top: 80px;padding-bottom: 80px;">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-lg-2">
-        <div class="col">
-          <div>
-            <div class="shadow-lg eventDiv eventDiv-education aos-init aos-animate" data-aos="zoom-out"
-              data-aos-duration="1000">
-              <p style="font-size: 31px;margin-top: -15px;"><strong>Python</strong><br><strong>(Online Program)</strong>
-              </p>
-            </div><img class="rounded img-fluid shadow-lg eventImg aos-init aos-animate" data-aos="zoom-out"
-              data-aos-duration="1000" data-aos-delay="150" src="Image/UNI_12.png">
-          </div>
-        </div>
-        <div class="col eveText" style="padding-top: 20px;">
-          <p data-aos="zoom-out" data-aos-duration="1000" class="eveGradientText-education aos-init aos-animate"
-            style="font-size: 30px;"><strong>Access Web Data</strong></p>
-          <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="100" class="aos-init aos-animate">
-            <strong>Udacity</strong></p>
-          <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="200" class="aos-init aos-animate">A
-            specialization provided by University of Michigan for Python on Coursera, covering Programming Fundamentals,
-            Web Access, Databases, Data Structures, and Retrieving, Processing, & Visualizing of Data among others.
-          </p><a href="https://www.coursera.org/account/accomplishments/verify/NZM98FAA48AS" target="_blank">
-            <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="300"
-              class="eveGradientText-education aos-init aos-animate"><strong>Learn more&nbsp;→</strong></p>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!------------------------------------------------>
-  <!------------------------------------------------>
-  <div style="background-color: #ffffff;padding: 30px;padding-top: 80px;padding-bottom: 80px;">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-lg-2">
-        <div class="col">
-          <div>
-            <div class="shadow-lg eventDiv eventDiv-education aos-init aos-animate" data-aos="zoom-out"
-              data-aos-duration="1000">
-              <p style="font-size: 31px;margin-top: -15px;"><strong>Python</strong><br><strong>(Online Program)</strong>
-              </p>
-            </div><img class="rounded img-fluid shadow-lg eventImg aos-init aos-animate" data-aos="zoom-out"
-              data-aos-duration="1000" data-aos-delay="150" src="Image/UNI_12.png">
-          </div>
-        </div>
-        <div class="col eveText" style="padding-top: 20px;">
-          <p data-aos="zoom-out" data-aos-duration="1000" class="eveGradientText-education aos-init aos-animate"
-            style="font-size: 30px;"><strong>Capstone</strong></p>
-          <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="100" class="aos-init aos-animate">
-            <strong>Udacity</strong></p>
-          <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="200" class="aos-init aos-animate">A
-            specialization provided by University of Michigan for Python on Coursera, covering Programming Fundamentals,
-            Web Access, Databases, Data Structures, and Retrieving, Processing, & Visualizing of Data among others.
-          </p><a href="https://www.coursera.org/account/accomplishments/verify/6A6BB59YVYJK" target="_blank">
-            <p data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="300"
-              class="eveGradientText-education aos-init aos-animate"><strong>Learn more&nbsp;→</strong></p>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--------------------footer---------------------------->
 
+  </div>
+  <!----------------------Certificate_2-------------------------->
+  <div class="first">
+
+    <div class="image_wrapper">
+      <img style="height: 300px" ; width="550px; rad" src="Image/Python_1.png" alt="" />
+      <div class="overlay">
+        <img style="height: 200px" ; width="360px" src="Image/UNI_12.png" alt="" />
+      </div>
+    </div>
+    <div class="card-1">
+      <p class="eveGradientText1" style="font-size: 30px;">
+        <strong>Data Structure</strong>
+      </p>
+      <p>
+        <strong>Michigan University</strong>
+      </p>
+      <p>A course provided by Coursera, Data Structure in which learn about accessing web data using python libraries
+      </p>
+      <a href="https://memp.pratt.duke.edu/" target="_blank">
+        <p class="eveGradientText1">
+          <strong>Learn more &nbsp;→</strong>
+        </p>
+      </a>
+    </div>
+
+  </div>
+
+
+  <div class="first">
+
+    <div class="image_wrapper">
+      <img style="height: 300px" ; width="550px; rad" src="Image/Python_1.png" alt="" />
+      <div class="overlay">
+        <img style="height: 200px" ; width="360px" src="Image/UNI_12.png" alt="" />
+      </div>
+    </div>
+
+    <div class="card-1">
+      <p class="eveGradientText1" style="font-size: 30px;">
+        <strong>Capstone</strong>
+      </p>
+      <p>
+        <strong>Michigan University</strong>
+      </p>
+      <p>A course provided by Coursera, Capstone in which learn about Retrieving, Processing, and Visualizing Data with
+        Python</p>
+      <a href="https://memp.pratt.duke.edu/" target="_blank">
+        <p class="eveGradientText1">
+          <strong>Learn more &nbsp;→</strong>
+        </p>
+      </a>
+    </div>
+  </div>
   <div style="height: 20vh;background: #fffefe;"></div>
   <div class="footer">
     <div class="row" style="padding-top: 30px;">
@@ -204,10 +153,10 @@
             Vahoniya</p>
           <p class="footer-pages" style="color: rgb(255,255,255);">
             <a href="index.html" style="color: rgb(255,255,255);">Home</a>&nbsp;•&nbsp;
-            <a href="Python_Certifcate.html" style="color: rgb(255,255,255);">Education</a>&nbsp;•&nbsp;
-            <a href="" style="color: rgb(255,255,255);">Projects</a>&nbsp;<br>
-            <a href="" style="color: rgb(255,255,255);">Other</a>&nbsp;
-
+              <a href="Python_Certifcate.html" style="color: rgb(255,255,255);">Education</a>&nbsp;•&nbsp;
+              <a href="" style="color: rgb(255,255,255);">Projects</a>&nbsp;<br>
+              <a href="" style="color: rgb(255,255,255);">Other</a>&nbsp;
+          
         </div>
       </div>
       <div class="col footer-div-right" style="padding-top: 5px;">
@@ -217,26 +166,27 @@
               alt=" LinkedIn Logo"></a><a href="" target="_blank" rel="noopener"><img class="img-fluid"
               data-bss-hover-animate="pulse" src="Image/github.webp"
               style="filter: invert(100%);height: 28px;margin: 5px;margin-right: 7px;margin-left: 8.5px;"
-              alt=" GitHub Logo"></a><a href="" target="_blank" rel="noopener"><img class="img-fluid"
-              data-bss-hover-animate="pulse" src="Image/polywork.png"
+              alt=" GitHub Logo"></a><a href="" target="_blank"
+            rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="Image/polywork.png"
               style="filter: invert(0%);height: 27px;margin: 10px;margin-right: 10px;margin-left: 10px;"
               alt="ORCID Logo">
-          </a>
-          <a href="https://www.cloudskillsboost.google/public_profiles/ee1acfc3-576a-4d7c-8404-0752c4d413de"
-            target="_blank" rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="Image/gcp.webp"
+            </a>
+            <a href="https://www.cloudskillsboost.google/public_profiles/ee1acfc3-576a-4d7c-8404-0752c4d413de"
+            target="_blank" rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse"
+              src="Image/gcp.webp"
               style="filter: invert(100%);height: 33px;margin: 5px;margin-right: 7px;margin-left: 5px;"
               alt="GCP Logo"></a><a href="" target="_blank" rel="noopener">
             <img class="img-fluid" data-bss-hover-animate="pulse" src="Image/telegram.webp"
               style="filter: invert(100%);height: 28px;margin: 5px;margin-right: 10px;margin-left: 10px;"
-              alt=" Telegram Logo"></a><a href="" target="_blank" rel="noopener"><img class="img-fluid"
-              data-bss-hover-animate="pulse" src="image/twitter.webp"
+              alt=" Telegram Logo"></a><a href="" target="_blank"
+            rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="image/twitter.webp"
               style="filter: invert(100%);height: 28px;margin: 5px;margin-right: 10px;margin-left: 8px;"
               alt="Twitter Logo">
-          </a>
-        </div>
-        <p class="footer-para" style="color: rgb(221,221,221);padding-top: 25px;">I am a B.Tech student with experience
-          in internship and a good background in Python and web development. Passionate about data science, I am
-          eager to explore its potential for the future.</p>
+            </a>
+            </div>
+        <p class="footer-para" style="color: rgb(221,221,221);padding-top: 25px;">Dhruv Vahoniya is an experienced product
+          lead and manager with a background in Data Science, Software Dev., AI, and Cloud. He's a publisher author with
+          expertise in Management and Finance.</p>
       </div>
     </div>
   </div>
