--- a/Pages/Experience.html
+++ b/Pages/Experience.html
@@ -25,32 +25,34 @@
   <!----------------------------navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary ">
     <div class="container-fluid">
-    
-		<a1 class="navbar-brand" href="#" style="color: black; font-family: Aladin,cursive; font-size: 40px; padding-left: 50px;">
 
-Dhruv Vahoniya
-		  </a1>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <a1 class="navbar-brand" href="#"
+        style="color: black; font-family: Aladin,cursive; font-size: 40px; padding-left: 50px;">
+
+        Dhruv Vahoniya
+      </a1>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
           </li>
-        <li class="nav-item">
-        <a class="nav-link" href="Python_Certifcate.html">Education</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="Experience.html">Experiences</a>
-        </li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Achivement</a>
-			</li>
-      </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="Education.html">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Experience.html">Experiences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projects</a>
+          </li>
+        </ul>
       </div>
     </div>
-</nav> 
+  </nav>
 
   <!------------------------------------------------->
 
@@ -73,33 +75,35 @@ Dhruv Vahoniya
     <div class="testimonial grid-col-span-2 flow bg-primary-400 quote text-neutral-100">
       <div class="flex">
         <div>
-          <img  src="Certificate/Intership.png" alt="daniel clifford" style="width: 300px;
-          height: 300px;
-        max-width: 100%;
-        display: block;">
+          <img src="Certificate/Intership.png" alt="" style="width: 300px;">
         </div>
         <div>
           <h2 class="name">BrainyBeam Info-tech</h2>
-          <p class="position">Worked on web development projects using ReactJS, a cutting-edge technology in the field.
+          <p class="position">During my internship at BrainyBeam Info-tech, I had the opportunity to work on web
+            development projects using ReactJS. This experience allowed me to gain hands-on experience in building
+            dynamic and interactive user interfaces. I learned how to effectively collaborate with a team, manage
+            project timelines, and troubleshoot technical issues. Overall, this internship enhanced my skills in ReactJS
+            and provided me with valuable insights into the world of web development.
           </p>
         </div>
       </div>
-  
+
     </div>
     <div class="testimonial grid-col-span-2 flow bg-primary-400 quote text-neutral-100">
       <div class="flex">
         <div>
-          <img src="Certificate/Workshop.webp" alt="Jonathan Walters" style="   width: 300px;
-          height: 300px;
-        max-width: 100%;
-        display: block;">
+          <img src="Certificate/Workshop.webp" alt="" style="width: 300px; height: 200px;">
         </div>
         <div>
           <h2 class="name">DeetsDigital Pvt.Ltd</h2>
-          <p class="position">Experiecnd two days workshop and learn more about how data science can be implemented in real world.</p>
+          <p class="position">Attending the 2-day workshop on Data Science at DeetsDigital Pvt. Ltd was an enriching
+            experience. I had the opportunity to learn about the practical implementation of data science techniques and
+            gained insights into their recent work for a finance company. This workshop provided me with valuable
+            knowledge on how data science can be applied in real-life scenarios and deepened my understanding of the
+            field. I am excited to apply these learnings to future projects in data science.</p>
         </div>
       </div>
-   
+
     </div>
   </div>
   <!----------------------------------------------------->
@@ -112,40 +116,49 @@ Dhruv Vahoniya
             Vahoniya</p>
           <p class="footer-pages" style="color: rgb(255,255,255);">
             <a href="index.html" style="color: rgb(255,255,255);">Home</a>&nbsp;•&nbsp;
-              <a href="Python_Certifcate.html" style="color: rgb(255,255,255);">Education</a>&nbsp;•&nbsp;
-              <a href="" style="color: rgb(255,255,255);">Projects</a>&nbsp;<br>
-              <a href="" style="color: rgb(255,255,255);">Other</a>&nbsp;
-          
+            <a href="Education.html" style="color: rgb(255,255,255);">Education</a>&nbsp;•&nbsp;
+            <a href="Experience.html" style="color: rgb(255,255,255);">Experiences</a>&nbsp;<br>
+            <a href="" style="color: rgb(255,255,255);">Projects</a>&nbsp;
+
         </div>
       </div>
       <div class="col footer-div-right" style="padding-top: 5px;">
-        <div class="footerLinks" style="background-color: #ffffff;width: 325px;"><a href="" target="_blank"
-            rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="Image/linkedin.webp"
+        <div class="footerLinks" style="background-color: #ffffff;width: 325px;">
+          <a href="" target="_blank" rel="noopener">
+            <img class="img-fluid" data-bss-hover-animate="pulse" src="Image/linkedin.webp"
               style="filter: invert(100%);height: 26px;margin: 5px;margin-right: 7px;margin-left: 10px;"
-              alt=" LinkedIn Logo"></a><a href="" target="_blank" rel="noopener"><img class="img-fluid"
+              alt=" LinkedIn Logo">
+            </a>
+            <a href="" target="_blank" rel="noopener">
+              <img class="img-fluid"
               data-bss-hover-animate="pulse" src="Image/github.webp"
               style="filter: invert(100%);height: 28px;margin: 5px;margin-right: 7px;margin-left: 8.5px;"
-              alt=" GitHub Logo"></a><a href="" target="_blank"
-            rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="Image/polywork.png"
+              alt=" GitHub Logo">
+            </a>
+            <a href="" target="_blank" rel="noopener">
+              <img class="img-fluid" data-bss-hover-animate="pulse" src="Image/polywork.png"
               style="filter: invert(0%);height: 27px;margin: 10px;margin-right: 10px;margin-left: 10px;"
               alt="ORCID Logo">
-            </a>
-            <a href="https://www.cloudskillsboost.google/public_profiles/ee1acfc3-576a-4d7c-8404-0752c4d413de"
-            target="_blank" rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse"
-              src="Image/gcp.webp"
+          </a>
+          <a href="https://www.cloudskillsboost.google/public_profiles/ee1acfc3-576a-4d7c-8404-0752c4d413de"
+            target="_blank" rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="Image/gcp.webp"
               style="filter: invert(100%);height: 33px;margin: 5px;margin-right: 7px;margin-left: 5px;"
-              alt="GCP Logo"></a><a href="" target="_blank" rel="noopener">
+              alt="GCP Logo">
+            </a>
+            <a href="" target="_blank" rel="noopener">
             <img class="img-fluid" data-bss-hover-animate="pulse" src="Image/telegram.webp"
               style="filter: invert(100%);height: 28px;margin: 5px;margin-right: 10px;margin-left: 10px;"
-              alt=" Telegram Logo"></a><a href="" target="_blank"
-            rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="image/twitter.webp"
+              alt=" Telegram Logo">
+            </a>
+              <a href="" target="_blank" rel="noopener">
+                <img class="img-fluid" data-bss-hover-animate="pulse" src="image/twitter.webp"
               style="filter: invert(100%);height: 28px;margin: 5px;margin-right: 10px;margin-left: 8px;"
               alt="Twitter Logo">
-            </a>
-            </div>
-        <p class="footer-para" style="color: rgb(221,221,221);padding-top: 25px;">Dhruv Vahoniya is an experienced product
-          lead and manager with a background in Data Science, Software Dev., AI, and Cloud. He's a publisher author with
-          expertise in Management and Finance.</p>
+          </a>
+        </div>
+        <p class="footer-para" style="color: rgb(221,221,221);padding-top: 25px;">I am a B.Tech student with experience
+          in internships and a strong background in Python and web development. Passionate about data science, I am
+          eager to explore its potential for the future.</p>
       </div>
     </div>
   </div>
