--- a/Pages/index.html
+++ b/Pages/index.html
@@ -277,7 +277,7 @@
               style="filter: invert(0%);height: 27px;margin: 10px;margin-right: 10px;margin-left: 10px;"
               alt="ORCID Logo">
           </a>
-          <a href="https://www.cloudskillsboost.google/public_profiles/ee1acfc3-576a-4d7c-8404-0752c4d413de"
+          <a href=""
             target="_blank" rel="noopener"><img class="img-fluid" data-bss-hover-animate="pulse" src="Image/gcp.webp"
               style="filter: invert(100%);height: 33px;margin: 5px;margin-right: 7px;margin-left: 5px;"
               alt="GCP Logo">
