--- a/Pages/index.html
+++ b/Pages/index.html
@@ -156,7 +156,7 @@
                 <br>
 
                 <button class="button" target="_blank"
-                  onclick="location.href='/Users/star007/Desktop/Books/DhruvVahoniya.github.io/Pages/Education.html'">Know
+                  onclick="location.href='https://dhruvvahoniya.github.io/Pages/Education.html'">Know
                   More</button>
 
               </div>
@@ -175,7 +175,7 @@
                   development at Brainybeaminfotech.</span>
                 <br>
                 <button class="button" target="_blank"
-                  onclick="location.href='///Users/star007/Desktop/My_Work/My%20Portfolio_site/Pages/Experience.html'">Know
+                  onclick="location.href='https://dhruvvahoniya.github.io/Pages/Education.html'">Know
                   More</button>
               </div>
             </div>
@@ -194,7 +194,7 @@
                 <br>
 
                 <button class="button" target="_blank"
-                  onclick="location.href='/Users/star007/Desktop/Books/DhruvVahoniya.github.io/Pages/Education.html'">Know
+                  onclick="location.href='https://dhruvvahoniya.github.io/Pages/Education.html'">Know
                   More</button>
               </div>
             </div>
@@ -216,7 +216,7 @@
                 <br>
 
                 <button class="button" target="_blank"
-                  onclick="location.href='/Users/star007/Desktop/Books/DhruvVahoniya.github.io/Pages/Education.html'">Know
+                  onclick="location.href='https://dhruvvahoniya.github.io/Pages/Education.html'">Know
                   More</button>
 
               </div>
@@ -236,7 +236,7 @@
                 <br>
 
                 <button class="button" target="_blank"
-                  onclick="location.href='/Users/star007/Desktop/Books/DhruvVahoniya.github.io/Pages/Education.html'">Know
+                  onclick="location.href='https://dhruvvahoniya.github.io/Pages/Experience.html'">Know
                   More</button>
               </div>
             </div>
