--- a/My_Website/index.html
+++ b/My_Website/index.html
@@ -140,7 +140,9 @@
       <div>
 
 
-        <h1>Some Achivement along the way</h1>
+        <h1>Some <span style="background: -webkit-linear-gradient(rgb(185, 11, 238), rgba(129, 4, 212, 0.774));
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;">Achivement</span> along the way</h1>
 <!-------------------------------Cards----------------------------->
         <div class="row mt-5">
 <!-------------------------------card-1----------------------------->
