--- a/My_Website/index.html
+++ b/My_Website/index.html
@@ -158,7 +158,7 @@
                 <br>
 
                 <button class="button" target="_blank"
-                  onclick="location.href='https://dhruvvahoniya.github.io/Pages/Education.html'">Know
+                  onclick="location.href='file:///Users/star007/Desktop/Books/DhruvVahoniya.github.io/My_Website/Education.html'">Know
                   More</button>
 
               </div>
@@ -177,7 +177,7 @@
                   development at Brainybeaminfotech.</span>
                 <br>
                 <button class="button" target="_blank"
-                  onclick="location.href='https://dhruvvahoniya.github.io/Pages/Education.html'">Know
+                  onclick="location.href='file:///Users/star007/Desktop/Books/DhruvVahoniya.github.io/My_Website/Experience.html'">Know
                   More</button>
               </div>
             </div>
@@ -196,7 +196,7 @@
                 <br>
 
                 <button class="button" target="_blank"
-                  onclick="location.href='https://dhruvvahoniya.github.io/Pages/Education.html'">Know
+                  onclick="location.href='file:///Users/star007/Desktop/Books/DhruvVahoniya.github.io/My_Website/Education.html'">Know
                   More</button>
               </div>
             </div>
@@ -218,7 +218,7 @@
                 <br>
 
                 <button class="button" target="_blank"
-                  onclick="location.href='https://dhruvvahoniya.github.io/Pages/Education.html'">Know
+                  onclick="location.href='file:///Users/star007/Desktop/Books/DhruvVahoniya.github.io/My_Website/Education.html'">Know
                   More</button>
 
               </div>
@@ -238,7 +238,7 @@
                 <br>
 
                 <button class="button" target="_blank"
-                  onclick="location.href='https://dhruvvahoniya.github.io/Pages/Experience.html'">Know
+                  onclick="location.href='file:///Users/star007/Desktop/Books/DhruvVahoniya.github.io/My_Website/Education.html'">Know
                   More</button>
               </div>
             </div>
